--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,17 @@
 name: all_english_words
-description: A starting point for Dart libraries or applications.
+description: A Package contain 500,000+ words, from Alpha-Numeric words to english words found in the dictionary..
 version: 1.0.0
-# repository: https://github.com/my_org/my_repo
+repository: https://github.com/Sammyowei/all_english_words
 
 environment:
   sdk: ^3.1.2
 
 # Add regular dependencies here.
 dependencies:
+  mockito: ^5.4.3
   # path: ^1.8.0
 
 dev_dependencies:
+  build_runner: ^2.4.6
   lints: ^2.0.0
   test: ^1.21.0
